--- a/src/styles/_badges.scss
+++ b/src/styles/_badges.scss
@@ -5,7 +5,10 @@
   font-weight: normal;
   text-align: center;
   white-space: nowrap;
-  border-radius: 1em;
+  padding: $ui-padding/4 $ui-padding/2.5;
+  min-width: $ui-padding*1.25;
+  border-radius: $ui-size*2;
+  background-color: $badge-background-color;
 
   &:empty {
     display: none; // Hide when un-used
@@ -55,8 +58,10 @@
   // Icon ----------------------
 
   &.icon {
-    font-size: round($component-icon-size*0.8);
-    padding: $component-icon-padding $component-icon-padding*2;
+    // font-size: round($component-icon-size*0.8);
+    // padding: $component-icon-padding $component-icon-padding*2;
+    font-size: $ui-size;
+    padding: $ui-padding-icon $ui-padding-icon*1.5;
   }
 
 }
