--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -74,7 +74,6 @@ $ui-tab-height:           $ui-padding*2;
 
 $font-size: 13px;
 $input-font-size: 14px;
-
 $disclosure-arrow-size: 12px;
 
 $font-family: 'Lucida Grande', 'Segoe UI', Ubuntu, Cantarell, sans-serif;
@@ -129,3 +128,141 @@ $syntax-color-tag: #b72424;
 $syntax-color-attribute: #87400d;
 $syntax-color-import: #97C378;
 $syntax-color-snippet: #97C378;
+
+/**
+ * --------------------------------
+ * One Dark UI Port
+ * --------------------------------
+ * TODO: proof the mixins here, the port is a little mixed up
+ */
+@mixin ui-syntax-color() {
+  $syntax-background-color: hsl(220,24%,20%);
+}
+@include ui-syntax-color(); // fallback color
+$ui-syntax-color: $syntax-background-color;
+$ui-hue: 220;
+$ui-saturation: 0;
+$ui-lightness: 0;
+$ui-lightness-border: 0;
+
+// Color guards -----------------
+$ui-s-h: hue($ui-syntax-color);
+$ui-s-s: saturation($ui-syntax-color);
+$ui-s-l: lightness($ui-syntax-color);
+$ui-inv: 10%; // inverse lightness if below
+
+@mixin ui-hue {
+  @if ($ui-s-s = 0) { $ui-hue: 220; } // Use blue hue when no saturation
+  @else if $ui-s-s > 0 { $ui-hue: $ui-s-h; }
+  @else { $ui-hue: 220; }
+}
+@include ui-hue;
+
+@mixin ui-saturation {
+  @if $ui-s-h <=  80 { $ui-saturation: min($ui-s-s,  5%); } // minimize saturation for brown
+  @else if ($ui-s-h >   80) and ($ui-s-h <  160) { $ui-saturation: min($ui-s-s, 12%); } // reduce saturation for green
+  @else if ($ui-s-h >= 160) and ($ui-s-l <  $ui-inv) { $ui-saturation: min($ui-s-s, 48%); } // limit max saturaiotn for very dark backgrounds
+  @else if ($ui-s-h >= 160) and ($ui-s-l >= $ui-inv) { $ui-saturation: $ui-s-s; }
+}
+@include ui-saturation;
+
+@mixin ui-lightness {
+  @if $ui-s-l <  $ui-inv {
+    $ui-lightness: $ui-s-l + 8%; // increase lightness when too dark
+    $ui-lightness-border: $ui-lightness*.3;
+  }
+  @else if $ui-s-l >= $ui-inv {
+    $ui-lightness: min($ui-s-l, 20%); // limit max lightness (for light syntax themes)
+    $ui-lightness-border: $ui-lightness*.6;
+  }
+}
+@include ui-lightness;
+
+// Main colors -----------------
+$ui-fg:     hsl($ui-hue, min($ui-saturation, 18%), max($ui-lightness*3, 66%) );
+$ui-bg:     hsl($ui-hue, $ui-saturation, $ui-lightness); // normalized $syntax-background-color
+$ui-border: hsl($ui-hue, $ui-saturation, $ui-lightness-border);
+
+// Text (Custom) -----------------
+$text-color-faded: desaturate($text-color, 20%);
+
+$text-color-added:    $text-color-success;  // green
+$text-color-ignored:  $text-color-subtle;   // faded
+$text-color-modified: $text-color-warning;  // orange
+$text-color-removed:  $text-color-error;    // red
+$text-color-renamed:  $text-color-info;     // blue
+
+
+// Background (Custom) -----------------
+$level-1-color: lighten($base-background-color, 6%);
+$level-2-color: $base-background-color;
+$level-3-color: darken($base-background-color, 3%);
+
+
+// Base -----------------
+$base-accent-color: hsl($ui-hue, 100%, 66%);
+
+
+// Components (Custom) -----------------
+$badge-background-color:            lighten($background-color-highlight, 6%);
+
+$button-text-color-selected:        contrast($button-background-color-selected, white, hsl($ui-hue,100%,10%), 40% );
+$button-border-color-selected:      $base-border-color;
+
+$checkbox-background-color:         fade($base-accent-color, 33%);
+
+$input-background-color-focus:      fadein($input-background-color, 6%);
+$input-selection-color:             darken($background-color-selected, 6%);
+$input-selection-color-focus:       $background-color-selected;
+
+$key-binding-border-color:          hsla(0,0%,100%,.1);
+$key-binding-background-color:      hsla(0,0%,100%,.1);
+
+$overlay-backdrop-color:            hsla($ui-hue,$ui-saturation,5%,.5);
+
+$progress-background-color:         $base-accent-color;
+
+$scrollbar-color:                   $level-1-color;
+$scrollbar-background-color:        $level-3-color; // replaced `transparent` with a solid color to test https://github.com/atom/one-light-ui/issues/4
+$scrollbar-color-editor:            contrast($ui-syntax-color, darken($ui-syntax-color, 18%), lighten($ui-syntax-color, 9%) );
+$scrollbar-background-color-editor: $ui-syntax-color;
+
+
+$tab-text-color:                    $text-color-subtle;
+$tab-text-color-active:             $text-color-highlight;
+$tab-text-color-editor:             contrast($ui-syntax-color, darken($ui-syntax-color, 50%), $text-color-highlight );
+$tab-background-color-editor:       $ui-syntax-color;
+
+$tooltip-background-color:          $base-accent-color;
+$tooltip-text-color:                contrast($tooltip-background-color, white, hsl($ui-hue,100%,10%), 40% );
+$tooltip-text-key-color:            $tooltip-background-color;
+$tooltip-background-key-color:      $tooltip-text-color;
+
+
+// Sizes (Custom) -----------------
+
+$ui-size:                 1em;
+$ui-input-size:           $ui-size*1.15;
+$ui-padding:              $ui-size*1.5;
+$ui-padding-pane:         $ui-size*.5;
+$ui-padding-icon:         $ui-padding/3.3;
+$ui-line-height:          $ui-size*2;
+$ui-tab-height:           $ui-padding*2;
+
+
+
+
+// Packages variables
+// These variables are used to override packages
+// ----------------------------------------------
+
+$settings-list-background-color: darken($level-2-color, 1.5%);
+$theme-config-box-shadow: inset 0 0 3px hsla(0, 0%, 100%, .4), 0 1px 3px hsla(0, 0%, 0%, .2);
+$theme-config-box-shadow-selected: inset 0 1px 3px hsla(0, 0%, 0%, .1);
+$theme-config-border-selected: hsla(0, 0%, 100%, .75);
+
+$markdown-preview-color: lighten($text-color, 15%);
+$markdown-preview-background-color: lighten($base-background-color, 3%);
+$markdown-preview-hr-color: lighten($base-background-color, 3%);
+$markdown-preview-code-color: lighten($text-color, 30%);
+$markdown-preview-code-background-color: lighten($base-background-color, 10%);
