--- a/src/styles/_messages.scss
+++ b/src/styles/_messages.scss
@@ -11,6 +11,8 @@
 
 ul.background-message {
   font-size: $font-size * 3;
+  font-weight: bold;
+  color: $text-color-faded;
 
   margin: 0;
   padding: 0;
