--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -28,3 +28,30 @@
   border-color: $base-accent-color;
   box-shadow: 0 0 0 1px $base-accent-color;
 }
+
+@mixin text($val){
+  @if $val = 'normal' {
+    font-weight: normal;
+    color: $text-color;
+  }
+  @else if $val = 'subtle' {
+    font-weight: normal;
+    color: $text-color-subtle;
+  }
+  @else if $val = 'highlight' or $val = 'selected' {
+    font-weight: normal;
+    color: $text-color-highlight;
+  }
+  @else if $val = 'info' {
+    color: $text-color-info;
+  }
+  @else if $val = 'success' {
+    color: $text-color-success;
+  }
+  @else if $val = 'warning' {
+    color: $text-color-warning;
+  }
+  @else if $val = 'error' {
+    color: $text-color-error;
+  }
+}
